asupersync-macros/tests/compile_fail/explore_seeds_missing_arg.rs
use asupersync_macros::explore_seeds;

#[explore_seeds]
fn missing_arg() {}

fn main() {}
